name:                pure-sync
version:             0.8.0.0
homepage:            purehs.org/doc/pure-sync
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-sync.git

library
  exposed-modules:
      Pure.Control.Sync

  build-depends:
    base
    
  hs-source-dirs:      src
  default-language:    Haskell2010